--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "NEXT_SKIP_TURBOPACK=1 next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
