--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NEXT_SKIP_TURBOPACK=1 next dev",
-    "build": "next build",
+    "build": "NEXT_SKIP_TURBOPACK=1 next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
